--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
 				  <ul>
 					<li>
 					  <a href="https://www.facebook.com/loretosoledadterror/" target="_blank">
-						<img src="img/FACEBOOK.png" alt="Facebook Logo" class="facebook-icon"></a>
+						<img src="FACEBOOK.png" alt="Facebook Logo" class="facebook-icon"></a>
 					</li>
 					<li>
 					  <a href="https://www.instagram.com/loretosoledadterror/" target="_blank">
-						<img src="img/INSTAGRAM.png" alt="Instagram Logo" class="instagram-icon"></a>
+						<img src="INSTAGRAM.png" alt="Instagram Logo" class="instagram-icon"></a>
 					</li>
 					<li>
 					  <a href="https://www.youtube.com/channel/UCX_zNqL7Xev0UipCMQpDdLQ" target="_blank">
-						<img src="img/YOUTUBE.png" alt="Youtube Logo" class="youtube-icon"></a>
+						<img src="YOUTUBE.png" alt="Youtube Logo" class="youtube-icon"></a>
 					</li>
 					<li>
 					  <a href="https://loretosoledad.wixsite.com/fotografiadeterror" target="_blank">
-						<img src="img/WEB.png" alt="Web Logo" class="web-icon"></a>
+						<img src="WEB.png" alt="Web Logo" class="web-icon"></a>
 					</li>
 				  </ul>
 				</div>
@@ -65,29 +65,29 @@
 		<script>
 			drawRoom();
 
-			addToLeft(20,  200, "img/1.png", "", "");
-			addToLeft(46,  125, "img/5b.png", "", "");
-			addToLeft(20,   50, "img/2.png", "", "");
-			addToLeft(46,  -50, "img/5.png", "", "");
-			addToLeft(20, -160, "img/3.png", "", "");
+			addToLeft(20,  200, "1.png", "", "");
+			addToLeft(46,  125, "5b.png", "", "");
+			addToLeft(20,   50, "2.png", "", "");
+			addToLeft(46,  -50, "5.png", "", "");
+			addToLeft(20, -160, "3.png", "", "");
 
-			addToFront(20, -320, "img/6.png", "", "");
-			addToFront(46, -250, "img/9.png", "", "");
-			addToFront(20, -170, "img/7.png", "", "");
-			addToFront(46,  -80, "img/10.png", "", "");
-			addToFront(20,    0, "img/8.png", "", "");
+			addToFront(20, -320, "6.png", "", "");
+			addToFront(46, -250, "9.png", "", "");
+			addToFront(20, -170, "7.png", "", "");
+			addToFront(46,  -80, "10.png", "", "");
+			addToFront(20,    0, "8.png", "", "");
 
-			addToRight(47, -160, "img/9.png", "", "");
-			addToRight(50,  -50, "img/10.png", "", "");
-			addToRight(37,   50, "img/Art_13.jpg", "", "");
-			addToRight(26,  125, "img/Art_14.jpg", "", "");
-			addToRight(21,  200, "img/Art_15.jpg", "", "");
+			addToRight(47, -160, "9.png", "", "");
+			addToRight(50,  -50, "10.png", "", "");
+			addToRight(37,   50, "Art_13.jpg", "", "");
+			addToRight(26,  125, "Art_14.jpg", "", "");
+			addToRight(21,  200, "Art_15.jpg", "", "");
 
-			addToBack(42,    0, "img/Art_16.jpg", "", "");
-			addToBack(42,  -80, "img/Art_17.jpg", "", "");
-			addToBack(25, -170, "img/Art_18.jpg", "", "");
-			addToBack(42, -250, "img/Art_19.jpg", "", "");
-			addToBack(27, -320, "img/Art_20.jpg", "", "test");
+			addToBack(42,    0, "Art_16.jpg", "", "");
+			addToBack(42,  -80, "Art_17.jpg", "", "");
+			addToBack(25, -170, "Art_18.jpg", "", "");
+			addToBack(42, -250, "Art_19.jpg", "", "");
+			addToBack(27, -320, "Art_20.jpg", "", "test");
 
 			renderRoom();
 
