ordenando por carpetas

--- a/galeria.html
+++ b/galeria.html
@@ -34,29 +34,29 @@
 			$("#buttonenter").click();
 			drawRoom();
 
-			addToLeft(20,  200, "1.png", "", "");
-			addToLeft(46,  125, "5b.png", "", "");
-			addToLeft(20,   50, "2.png", "", "");
-			addToLeft(46,  -50, "5.png", "", "");
-			addToLeft(20, -160, "3.png", "", "");
+			addToLeft(20,  200, "recursos/imagenes/1.png", "", "");
+			addToLeft(46,  125, "recursos/imagenes/5b.png", "", "");
+			addToLeft(20,   50, "recursos/imagenes/2.png", "", "");
+			addToLeft(46,  -50, "recursos/imagenes/5.png", "", "");
+			addToLeft(20, -160, "recursos/imagenes/3.png", "", "");
 
-			addToFront(20, -320, "6.png", "", "");
-			addToFront(46, -250, "9.png", "", "");
-			addToFront(20, -170, "7.png", "", "");
-			addToFront(46,  -80, "10.png", "", "");
-			addToFront(20,    0, "8.png", "", "");
+			addToFront(20, -320, "recursos/imagenes/6.png", "", "");
+			addToFront(46, -250, "recursos/imagenes/9.png", "", "");
+			addToFront(20, -170, "recursos/imagenes/7.png", "", "");
+			addToFront(46,  -80, "recursos/imagenes/10.png", "", "");
+			addToFront(20,    0, "recursos/imagenes/8.png", "", "");
 
-			addToRight(22, -160, "12.png", "", "");
-			addToRight(50,  -50, "14.png", "", "");
-			addToRight(20, 	 50, "13.png", "", "");
-			addToRight(50,  125, "15.png", "", "");
-			addToRight(21,  200, "11.png", "", "");
+			addToRight(22, -160, "recursos/imagenes/12.png", "", "");
+			addToRight(50,  -50, "recursos/imagenes/14.png", "", "");
+			addToRight(20, 	 50, "recursos/imagenes/13.png", "", "");
+			addToRight(50,  125, "recursos/imagenes/15.png", "", "");
+			addToRight(21,  200, "recursos/imagenes/11.png", "", "");
 
-			addToBack(42,    0, "Art_16.jpg", "", "");
-			addToBack(42,  -80, "Art_17.jpg", "", "");
-			addToBack(25, -170, "Art_18.jpg", "", "");
-			addToBack(42, -250, "Art_19.jpg", "", "");
-			addToBack(27, -320, "Art_20.jpg", "", "test");
+			addToBack(42,    0, "recursos/imagenes/Art_16.jpg", "", "");
+			addToBack(42,  -80, "recursos/imagenes/Art_17.jpg", "", "");
+			addToBack(25, -170, "recursos/imagenes/Art_18.jpg", "", "");
+			addToBack(42, -250, "recursos/imagenes/Art_19.jpg", "", "");
+			addToBack(27, -320, "recursos/imagenes/Art_20.jpg", "", "test");
 
 			renderRoom();
 
