--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 					<ul>
 					<li>
 						<a href="https://www.facebook.com/loretosoledadterror/" target="_blank">
-						<img src="FACEBOOK.png" alt="Facebook Logo" class="facebook-icon"></a>
+						<img src="recursos/imagenes/FACEBOOK.png" alt="Facebook Logo" class="facebook-icon"></a>
 					</li>
 					<li>
 						<a href="https://www.instagram.com/loretosoledadterror/" target="_blank">
-						<img src="INSTAGRAM.png" alt="Instagram Logo" class="instagram-icon"></a>
+						<img src="recursos/imagenes/INSTAGRAM.png" alt="Instagram Logo" class="instagram-icon"></a>
 					</li>
 					<li>
 						<a href="https://www.youtube.com/channel/UCX_zNqL7Xev0UipCMQpDdLQ" target="_blank">
-						<img src="YOUTUBE.png" alt="Youtube Logo" class="youtube-icon"></a>
+						<img src="recursos/imagenes/YOUTUBE.png" alt="Youtube Logo" class="youtube-icon"></a>
 					</li>
 					<li>
 						<a href="https://loretosoledad.wixsite.com/fotografiadeterror" target="_blank">
-						<img src="WEB.png" alt="Web Logo" class="web-icon"></a>
+						<img src="recursos/imagenes/WEB.png" alt="Web Logo" class="web-icon"></a>
 					</li>
 					</ul>
 				</div>
