ocultando iamges que no van en una pared

--- a/galeria.html
+++ b/galeria.html
@@ -52,11 +52,11 @@
 			addToRight(50,  125, "recursos/imagenes/15.png", "", "");
 			addToRight(21,  200, "recursos/imagenes/11.png", "", "");
 
-			addToBack(42,    0, "recursos/imagenes/Art_16.jpg", "", "");
-			addToBack(42,  -80, "recursos/imagenes/Art_17.jpg", "", "");
-			addToBack(25, -170, "recursos/imagenes/Art_18.jpg", "", "");
-			addToBack(42, -250, "recursos/imagenes/Art_19.jpg", "", "");
-			addToBack(27, -320, "recursos/imagenes/Art_20.jpg", "", "test");
+			// addToBack(42,    0, "recursos/imagenes/Art_16.jpg", "", "");
+			// addToBack(42,  -80, "recursos/imagenes/Art_17.jpg", "", "");
+			// addToBack(25, -170, "recursos/imagenes/Art_18.jpg", "", "");
+			// addToBack(42, -250, "recursos/imagenes/Art_19.jpg", "", "");
+			// addToBack(27, -320, "recursos/imagenes/Art_20.jpg", "", "test");
 
 			renderRoom();
 
