cambio en mensaje de entrada

--- a/galeria.html
+++ b/galeria.html
@@ -60,7 +60,7 @@
 
 			renderRoom();
 
-			welcome("", "Bienvenido al museo virtual de arte desarrollado por Leonardo Javier Russo. Haga click o toque una obra de arte para acercarse a ella y conocer su historia.");
+			welcome("", "Bienvenido a la exposición virtual de arte de terror desarrollado por LoretoSoledad. Haga click o toque una obra de arte para acercarse a ella.");
 		</script>
 	</body>
 </html>
