--- a/galeria.html
+++ b/galeria.html
@@ -18,10 +18,10 @@
 
 		<div id="content"><div id="container"></div></div>
 
-		<div id="controls">
+		<!-- <div id="controls">
 			<div id="controls_minus"></div>
 			<div id="controls_plus"></div>
-		</div>
+		</div> -->
 
 		<div id="info"><div id="infotext"></div></div>
 		<script
@@ -59,8 +59,9 @@
 			// addToBack(27, -320, "recursos/imagenes/Art_20.jpg", "", "test");
 
 			renderRoom();
+			document.getElementById("buttonenter").onclick();
+			// welcome("", "Bienvenido a la exposición virtual de arte de terror desarrollado por LoretoSoledad. Haga click o toque una obra de arte para acercarse a ella.");
 
-			welcome("", "Bienvenido a la exposición virtual de arte de terror desarrollado por LoretoSoledad. Haga click o toque una obra de arte para acercarse a ella.");
 		</script>
 	</body>
 </html>
