cambio ubicacion de paredes

--- a/galeria.html
+++ b/galeria.html
@@ -87,11 +87,17 @@
 		addToLeft(46, -50, "recursos/imagenes/5.png", "", "");
 		addToLeft(20, -160, "recursos/imagenes/3.png", "", "");
 
-		addToFront(20, -320, "recursos/imagenes/6.png", "", "");
-		addToFront(46, -250, "recursos/imagenes/9.png", "", "");
-		addToFront(20, -170, "recursos/imagenes/7.png", "", "");
-		addToFront(46, -80, "recursos/imagenes/10.png", "", "");
-		addToFront(20, 0, "recursos/imagenes/8.png", "", "");
+		// addToFront(20, -320, "recursos/imagenes/6.png", "", "");
+		// addToFront(46, -250, "recursos/imagenes/9.png", "", "");
+		// addToFront(20, -170, "recursos/imagenes/7.png", "", "");
+		// addToFront(46, -80, "recursos/imagenes/10.png", "", "");
+		// addToFront(20, 0, "recursos/imagenes/8.png", "", "");
+
+		// addToFront(20, -320, "recursos/imagenes/6.png", "", "");
+		addToFront(230, -100, "recursos/imagenes/Titulo.png", "", "");
+		// addToFront(20, -170, "recursos/imagenes/7.png", "", "");
+		addToFront(20, -250, "recursos/imagenes/descripcion.png", "", "");
+		// addToFront(20, 0, "recursos/imagenes/8.png", "", "");
 
 		addToRight(22, -160, "recursos/imagenes/12.png", "", "");
 		addToRight(50, -50, "recursos/imagenes/14.png", "", "");
@@ -100,14 +106,19 @@
 		addToRight(21, 200, "recursos/imagenes/11.png", "", "");
 
 		// addToBack(42,    0, "recursos/imagenes/Art_16.jpg", "", "");
-		addToBack(42,  -80, "recursos/imagenes/Titulo.png", "", "");
+		// addToBack(82,  -120, "recursos/imagenes/Titulo.png", "", "");
 		// addToBack(25, -170, "recursos/imagenes/Art_18.jpg", "", "");
-		addToBack(42, -250, "recursos/imagenes/descripcion.png", "", "");
+		// addToBack(20, -250, "recursos/imagenes/descripcion.png", "", "");
 		// addToBack(27, -320, "recursos/imagenes/Art_20.jpg", "", "test");
+
+		addToBack(20, -320, "recursos/imagenes/6.png", "", "");
+		addToBack(46, -250, "recursos/imagenes/9.png", "", "");
+		addToBack(20, -170, "recursos/imagenes/7.png", "", "");
+		addToBack(46, -80, "recursos/imagenes/10.png", "", "");
+		addToBack(20, 0, "recursos/imagenes/8.png", "", "");
 
 		renderRoom();
 		document.getElementById("buttonenter").onclick();
-			// welcome("", "Bienvenido a la exposición virtual de arte de terror desarrollado por LoretoSoledad. Haga click o toque una obra de arte para acercarse a ella.");
 
 	</script>
 </body>
