--- a/galeria.html
+++ b/galeria.html
@@ -51,10 +51,10 @@
 			</div>
 		</div>
 
-		<audio src="music/ukulele.mp3" id="audio"></audio>
+		<audio src="music/La canción de la muerte.mp3" id="audio"></audio>
 
 		<div class="img-container">
-			<img src="images/ukulele.jpg" alt="music-cover" id="cover" />
+			<img src="images/DiscoMezcla.png" alt="music-cover" id="cover" />
 		</div>
 		<div class="navigation">
 			<button id="prev" class="action-btn">
