probando nuevas imagenes hd v2

--- a/galeria.html
+++ b/galeria.html
@@ -82,7 +82,7 @@
 		drawRoom();
 
 		addToLeft(20, 200, "recursos/imagenes/1HD.png", "", "");
-		addToLeft(46, 125, "recursos/imagenes/5b.png", "", "");
+		addToLeft(46, 125, "recursos/imagenes/viejas/5b.png", "", "");
 		addToLeft(20, 50, "recursos/imagenes/2HD.png", "", "");
 		addToLeft(46, -50, "recursos/imagenes/5HD.png", "", "");
 		addToLeft(20, -160, "recursos/imagenes/3HD.png", "", "");
