devolviendo a estado funcional para movil

--- a/galeria.html
+++ b/galeria.html
@@ -81,11 +81,11 @@
 		$("#buttonenter").click();
 		drawRoom();
 
-		addToLeft(20, 200, "recursos/imagenes/1HD.png", "", "");
-		addToLeft(46, 125, "recursos/imagenes/viejas/5b.png", "", "");
-		addToLeft(20, 50, "recursos/imagenes/2HD.png", "", "");
-		addToLeft(46, -50, "recursos/imagenes/5HD.png", "", "");
-		addToLeft(20, -160, "recursos/imagenes/3HD.png", "", "");
+		addToLeft(20, 200, "recursos/imagenes/1.png", "", "");
+		addToLeft(46, 125, "recursos/imagenes/5b.png", "", "");
+		addToLeft(20, 50, "recursos/imagenes/2.png", "", "");
+		addToLeft(46, -50, "recursos/imagenes/5.png", "", "");
+		addToLeft(20, -160, "recursos/imagenes/3.png", "", "");
 
 		// addToFront(20, -320, "recursos/imagenes/6.png", "", "");
 		// addToFront(46, -250, "recursos/imagenes/9.png", "", "");
@@ -96,14 +96,14 @@
 		// addToFront(20, -320, "recursos/imagenes/6.png", "", "");
 		addToFront(230, -100, "recursos/imagenes/Titulo.png", "", "");
 		// addToFront(20, -170, "recursos/imagenes/7.png", "", "");
-		addToFront(20, -250, "recursos/imagenes/TEXTO.png", "", "");
+		addToFront(20, -250, "recursos/imagenes/descripcion.png", "", "");
 		// addToFront(20, 0, "recursos/imagenes/8.png", "", "");
 
-		addToRight(22, -160, "recursos/imagenes/12HD.png", "", "");
-		addToRight(50, -50, "recursos/imagenes/14HD.png", "", "");
-		addToRight(20, 50, "recursos/imagenes/13HD.png", "", "");
-		addToRight(50, 125, "recursos/imagenes/15HD.png", "", "");
-		addToRight(21, 200, "recursos/imagenes/11HD.png", "", "");
+		addToRight(22, -160, "recursos/imagenes/12.png", "", "");
+		addToRight(50, -50, "recursos/imagenes/14.png", "", "");
+		addToRight(20, 50, "recursos/imagenes/13.png", "", "");
+		addToRight(50, 125, "recursos/imagenes/15.png", "", "");
+		addToRight(21, 200, "recursos/imagenes/11.png", "", "");
 
 		// addToBack(42,    0, "recursos/imagenes/Art_16.jpg", "", "");
 		// addToBack(82,  -120, "recursos/imagenes/Titulo.png", "", "");
@@ -111,11 +111,11 @@
 		// addToBack(20, -250, "recursos/imagenes/descripcion.png", "", "");
 		// addToBack(27, -320, "recursos/imagenes/Art_20.jpg", "", "test");
 
-		addToBack(20, -320, "recursos/imagenes/6HD.png", "", "");
-		addToBack(46, -250, "recursos/imagenes/9HD.png", "", "");
-		addToBack(20, -170, "recursos/imagenes/7HD.png", "", "");
-		addToBack(46, -80, "recursos/imagenes/10HD.png", "", "");
-		addToBack(20, 0, "recursos/imagenes/8HD.png", "", "");
+		addToBack(20, -320, "recursos/imagenes/6.png", "", "");
+		addToBack(46, -250, "recursos/imagenes/9.png", "", "");
+		addToBack(20, -170, "recursos/imagenes/7.png", "", "");
+		addToBack(46, -80, "recursos/imagenes/10.png", "", "");
+		addToBack(20, 0, "recursos/imagenes/8.png", "", "");
 
 		renderRoom();
 		document.getElementById("buttonenter").onclick();
